--- a/tasklist/package.json
+++ b/tasklist/package.json
@@ -12,9 +12,9 @@
     "@react-native-async-storage/async-storage": "^1.18.1",
     "expo": "~48.0.15",
     "expo-status-bar": "~1.4.4",
+    "expo-updates": "~0.16.4",
     "react": "18.2.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^4.8.0",
     "react-native": "0.71.3",
     "react-native-web": "~0.18.11"
   },
