--- a/tasklist/app.json
+++ b/tasklist/app.json
@@ -21,10 +21,16 @@
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
-      }
+      },
+      "package": "com.guill392.tasklist"
     },
     "web": {
       "favicon": "./assets/favicon.png"
+    },
+    "extra": {
+      "eas": {
+        "projectId": "e326ce4b-c9a6-4619-a2e7-2786a0b94032"
+      }
     }
   }
 }
