--- a/tasklist/package.json
+++ b/tasklist/package.json
@@ -10,9 +10,9 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.18.1",
-    "expo": "~48.0.15",
+    "expo": "^46.0.21",
     "expo-status-bar": "~1.4.4",
-    "expo-updates": "~0.16.4",
+    "expo-updates": "^0.4.2",
     "react": "18.2.0",
     "react-dom": "^18.2.0",
     "react-native": "0.71.3",
