--- a/compoundcalc/app.json
+++ b/compoundcalc/app.json
@@ -21,10 +21,16 @@
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
-      }
+      },
+      "package": "com.guill392.compoundcalc"
     },
     "web": {
       "favicon": "./assets/favicon.png"
+    },
+    "extra": {
+      "eas": {
+        "projectId": "ca2bc750-aa9f-4c03-bfba-c950b8c6b088"
+      }
     }
   }
 }
