--- a/simpletasklist/package.json
+++ b/simpletasklist/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "tasklist",
+  "name": "simpletasklist",
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
@@ -9,15 +9,12 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "1.18.2",
-    "expo": "^49.0.0",
+    "@react-native-async-storage/async-storage": "^1.19.1",
+    "expo": "~49.0.5",
     "expo-status-bar": "~1.6.0",
-    "expo-updates": "~0.18.11",
     "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react-dom": "^18.2.0",
     "react-native": "0.72.3",
-    "react-native-scrollable-tab-view": "^1.0.0",
-    "react-native-tab-view": "^3.5.2",
     "react-native-web": "~0.19.6"
   },
   "devDependencies": {
